# robotr1_ws

./: README.md  arduino-cli.sh  colconbuild.sh  ws_clone.sh
install/: local_setup.sh  setup.sh
install/joy_tester/share/joy_tester/: package.sh
install/r1/lib/r1/: camera_node.py  kalmanFilter.py  robot_movement.py  serialarduino.py  sub_pose.py
install/r1/lib/r1/src/: odometry.py  teleop_robot.py
install/r1/share/ament_index/resource_index/parent_prefix_path/: r1
install/r1/share/r1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/r1/: CMakeLists.txt  package.xml
src/r1/arduino_mega/: Motor.ino  arduino_mega.ino  components.ino  serialjson.ino
src/r1/launch/: camera.launch.py  joystick.launch.py  r1.launch.py
src/r1/src/: camera_node.py  odometry.py  robot_movement.py  serialarduino.py  sub_pose.py
test/: ball_detection.py  catch_ball.py  odometry.py
